# optical-flow

./: .gitignore  README.md  math.md
cpp/: CMakeLists.txt  dense_flow.cpp  sparse_flow.cpp
cuda/: CMakeLists.txt  bird.cpp  lucas_kanade.cu  main.cpp  main_cpu.cpp
cuda/utils/: utils.h
data/: README.md
python/: dense_flow.py  main.py  sparse_flow.py  utils.py
python/algorithms/: dense_flow.py  sparse_flow.py  utils.py
utils/: utils.cpp
